--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,7 @@ sniffio==1.2.0
 soupsieve==2.3.1
 stack-data==0.2.0
 statsmodels==0.13.2
+tbats==1.1.0
 terminado==0.13.3
 testpath==0.6.0
 tornado==6.1
