--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ testpath==0.6.0
 tornado==6.1
 traitlets==5.1.1
 urllib3==1.26.9
+u8darts==0.19.0
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.1
